--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=Spring Boot Project
+spring.application.name="Spring Boot Project"
+spring.profiles.active=test
+spring.jpa.open-in-view=true
